- Added skype, facebook preview image.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
+  <!--Skype | Facebook rendering content-->
+  <meta property="og:title" content="ngx-structure"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="https://i.ibb.co/FnTTTMX/building-block.jpg"/>
+  <meta property="og:description"
+        content="A simple code structure for Angular X project that uses typescript, webpack, ..."/>
+
   <!-- Set the base href -->
   <base href="/"/>
 </head>
