- Implemented material design.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <meta property="og:description"
         content="A simple code structure for Angular X project that uses typescript, webpack, ..."/>
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <!-- Set the base href -->
   <base href="/"/>
 </head>
